fix for navigation not clickable on small landscape screens

--- a/app/styles/landingpage/intro.scss
+++ b/app/styles/landingpage/intro.scss
@@ -17,6 +17,7 @@
   z-index: 100;
   animation: 3s cubic-bezier(0.5, 0.1, 0.37, 1) scale-in-logo forwards;
   transform: scale(0.85, 0.85);
+  z-index: -1;
 
   @include media-breakpoint-up(sm) {
     fill: map-get($colors, white);
